--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "react-scripts": "4.0.2",
     "semantic-ui-css": "^2.4.1",
     "semantic-ui-react": "^2.0.3",
+    "typescript": "^4.1.3",
     "web-vitals": "^1.0.1"
   },
   "scripts": {
@@ -37,5 +38,8 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "@types/react": "^17.0.1"
   }
 }
